--- a/package.json
+++ b/package.json
@@ -35,10 +35,11 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "5.0.5",
     "sass": "1.77.5",
+    "typescript": "^5.6.2",
     "unplugin-auto-import": "0.17.6",
+    "unplugin-vue-setup-extend-plus": "1.0.1",
     "vite": "5.3.2",
     "vite-plugin-compression": "0.5.1",
-    "vite-plugin-svg-icons": "2.0.1",
-    "unplugin-vue-setup-extend-plus": "1.0.1"
+    "vite-plugin-svg-icons": "2.0.1"
   }
 }
